--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/css/screen.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
     <link rel="icon" href="/favicon.png">
     <!--
