--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -14,10 +14,11 @@
     <!-- About this document -->
     <meta name="description" content="Chopstick is a framework based on the ITCSS architecture and a series of principles. It creates a structure to easily set-up and build bespoke web projects.">
     <meta name="author" content="">
-    <title>Chopstick</title>
+    <title>Strativity</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/css/screen.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
     <link rel="icon" href="/favicon.png">
     <!--
